fixed <p> line spacing

--- a/Client/more-than-you-can-chew/src/components/stylesheets/Main.css
+++ b/Client/more-than-you-can-chew/src/components/stylesheets/Main.css
@@ -6,8 +6,11 @@
     
 }
 
-h2, h1, h3 {
+h2, h1, h3, p {
   padding-left: 2vw;
+}
+p {
+  line-height:5%;
 }
 
 .ButtonContainer{
